Fix deprecated URL constructor